<resources>
    <string name="app_name">Sail</string>
    <string name="https_url_com">https://url.com</string>
    <string name="go">Go</string>
    <string name="home">Home</string>
    <string name="home_url">https://www.google.com</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="delete">delete</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites">Favorites</string>
</resources>